--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
@@ -33,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.8",
